force-app/main/default/objects/Product2/fields/Duration_of_visit__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_visit__c</fullName>
    <label>Duration of visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 min</fullName>
            </value>
            <value>
                <fullName>30 min</fullName>
            </value>
            <value>
                <fullName>45 min</fullName>
            </value>
            <value>
                <fullName>60 min</fullName>
            </value>
            <value>
                <fullName>1 day</fullName>
            </value>
            <value>
                <fullName>2 day</fullName>
            </value>
            <value>
                <fullName>3 day</fullName>
            </value>
            <value>
                <fullName>4 day</fullName>
            </value>
            <value>
                <fullName>5 day</fullName>
            </value>
            <value>
                <fullName>5+ days</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>