force-app/main/default/objects/Product2/fields/Level_of_service__c.field-meta.xml
<CustomField>
    <fullName>Level_of_service__c</fullName>
    <label>Level of service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>