force-app/main/default/objects/Product2/fields/Level_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Visit__c</fullName>
    <label>Level of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Inpatient</fullName>
            </value>
            <value>
                <fullName>Ambulatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>