force-app/main/default/objects/Product2/fields/Location_of_service__c.field-meta.xml
<CustomField>
    <fullName>Location_of_service__c</fullName>
    <label>Location of service</label>
    <length>225</length>
    <type>Text</type>
</CustomField>